# fiohairstyles

./: README.md  app.py  clients.txt  pyproject.toml
dynamo/: appointment.py  client.py  dynamo.py
models/: appointment.py  client.py  enum.py  source.py
pages/: appointment_detail.py  appointments.py  calendar.py  clients.py  incomes.py
pages/dialogs/: create_appointment_dialog.py  create_client_dialog.py
scripts/: import_appointments.py  import_clients.py  parse_csv.py
styles/: markdown.py
