[project]
name = "fiohairstyles"
version = "0.1.0"
description = ""
authors = [
    {name = "danny"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "boto3 (>=1.26.0)",
    "python-dotenv (>=1.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
[tool.poetry.dependencies]
python = ">=3.13,<4.0"